--- a/image vd.html
+++ b/image vd.html
@@ -96,6 +96,7 @@
 	</section>
 	<section id='charger'></section>
 </body><script type='text/javascript'>
+	var tmpImgLoad = true;
 	const imageModif = document.getElementsByTagName ('img')[0];
 	const imageFrame = document.getElementById ('img-frame');
 //	const canvas = document.getElementsByTagName ('canvas')[0];
@@ -121,12 +122,12 @@
 		imageModif.alt = event.target.files[0].name.substring (0,p);
 	});
 	imageModif.onload = function(){
-		if ('blob:null/' === this.src.substring (0,10) || true){
+		if ('blob:null/' === this.src.substring (0,10) || tmpImgLoad){
 			const img = new Image();
 			img.src = this.src;
 			imageRef.width = img.width;
 			imageRef.height = img.height;
-			console.log (img.width, img.height);
+			console.log (imageRef.width, imageRef.height);
 			canvas.height = this.height;
 			canvas.width = this.width;
 			/*
@@ -139,13 +140,14 @@
 			this.height = img.height *300/ diag;
 			this.style.left = (150- this.width /2) + 'px';
 			this.style.top = (150- this.height /2) + 'px';
+			tmpImgLoad = false;
 	}}
 	function tumble90degree(){
 		canvas.width = imageModif.height;
 		canvas.height = imageModif.width;
 		context.rotate (Math.PI /2);
-		context.drawImage (imageModif, 0, - imageModif.height);
-	//	context.drawImage (imageModif, 0, - imageModif.height, canvas.height, canvas.width);
+	//	context.drawImage (imageModif, 0, - imageModif.height);
+		context.drawImage (imageModif, 0, - imageModif.height, canvas.height, canvas.width);
 		imageModif.src = canvas.toDataURL();
 		imageModif.width = canvas.width;
 		imageModif.height = canvas.height;
@@ -206,9 +208,75 @@
 		movingLines[3].style.top = this.value + '%';
 		imageRef.xu = parseInt (this.value);
 	}
+	// valider mes modifs
+
+	function degreeTOradian (degree){ return degree * Math.PI / 180; }
+	function degreeTOcos (degree){ return Math.cos (degree * Math.PI / 180); }
+	function degreeTOsin (degree){ return Math.sin (degree * Math.PI / 180); }
+	function validRotate (){
+		const imgAngle = Math.atan (imageModif.height / imageModif.width);
+		var ecartWidth =0;
+		var ecartHeight =0;
+		// hauteur, imageRef.rotation >0
+		if (imageRef.rotation >0){
+			canvas.width = degreeTOcos (imageRef.rotation) * imageModif.width - degreeTOcos (90+ imageRef.rotation) * imageModif.height;
+			canvas.height = 300 * (Math.sin (imgAngle + degreeTOradian (imageRef.rotation)));
+			// TODO centrer l'image
+			ecartWidth = degreeTOcos (90+ imageRef.rotation) * imageModif.height;
+			ecartHeight = - ecartWidth * degreeTOsin (- imageRef.rotation);
+			ecartWidth *= - degreeTOcos (- imageRef.rotation);
+		}
+		else if (imageRef.rotation <0){
+			canvas.width = 300 * (Math.cos (imgAngle + degreeTOradian (imageRef.rotation)));
+			canvas.height = degreeTOsin (90+ imageRef.rotation) * imageModif.height - degreeTOsin (imageRef.rotation) * imageModif.width;
+			// TODO centrer l'image
+			ecartHeight = degreeTOsin (imageRef.rotation) * imageModif.width;
+			ecartWidth = - ecartHeight * degreeTOcos (90- imageRef.rotation);
+			ecartHeight *= - degreeTOsin (90- imageRef.rotation);
+		}
+		// rotation
+		context.rotate (degreeTOradian (imageRef.rotation));
+		context.drawImage (imageModif, ecartWidth, ecartHeight);
+		newImgSrc = canvas.toDataURL();
+		imageModif.src = newImgSrc;
+		imageModif.width = canvas.width;
+		imageModif.height = canvas.height;
+	}
 	function validall(){
 		context.clearRect (0,0, canvas.width, canvas.height);
 		imageModif.src = imageRef.src;
+		// la rotation
+		if (imageRef.nbRotation >0) imageRef.rotation += (imageRef.nbRotation *90);
+		while (imageRef.nbRotation >359) imageRef.nbRotation -=360;
+		while (imageRef.nbRotation <-359) imageRef.nbRotation +=360;
+		var ecartWidth =0;
+		var ecartHeight =0;
+		if (imageRef.rotation !==0){
+			const diag = Math.sqrt (imageRef.width * imageRef.width + imageRef.height * imageRef.height);
+			const imgAngle = Math.atan (imageRef.height / imageRef.width);
+			// hauteur, imageRef.rotation >0
+			if (imageRef.rotation >0){
+				imageRef.width = degreeTOcos (imageRef.rotation) * imageRef.width - degreeTOcos (90+ imageRef.rotation) * imageRef.height;
+				imageRef.height = diag * (Math.sin (imgAngle + degreeTOradian (imageRef.rotation)));
+				// TODO centrer l'image
+				ecartWidth = degreeTOcos (90+ imageRef.rotation) * imageRef.height;
+				ecartHeight = - ecartWidth * degreeTOsin (- imageRef.rotation);
+				ecartWidth *= - degreeTOcos (- imageRef.rotation);
+			}
+			else if (imageRef.rotation <0){
+				imageRef.width = diag * (Math.cos (imgAngle + degreeTOradian (imageRef.rotation)));
+				imageRef.height = degreeTOsin (90+ imageRef.rotation) * imageRef.height - degreeTOsin (imageRef.rotation) * imageRef.width;
+				// TODO centrer l'image
+				ecartHeight = degreeTOsin (imageRef.rotation) * imageRef.width;
+				ecartWidth = - ecartHeight * degreeTOcos (90- imageRef.rotation);
+				ecartHeight *= - degreeTOsin (90- imageRef.rotation);
+			}
+			ecartWidth = ecartWidth *100/ imageRef.width;
+			ecartHeight = ecartHeight *100/ imageRef.height;
+			imageRef.xo += ecartWidth;
+			imageRef.yo += ecartHeight;
+		}
+		console.log (imageRef);
 		// le recadrage
 		var coordTmp =0;
 		if (imageRef.xo > imageRef.xu){
@@ -223,25 +291,25 @@
 		}
 		imageRef.xu -= imageRef.xo;
 		imageRef.yu -= imageRef.yo;
-		imageRef.xo *= imageRef.width /100;
-		imageRef.xu *= imageRef.width /100;
-		imageRef.yo *= imageRef.height /100;
-		imageRef.yu *= imageRef.height /100;
+		imageRef.xo = imageRef.xo * imageRef.width /100;
+		imageRef.xu = imageRef.xu * imageRef.width /100;
+		imageRef.yo = imageRef.yo * imageRef.height /100;
+		imageRef.yu = imageRef.yu * imageRef.height /100;
 		canvas.width = imageRef.xu;
 		canvas.height = imageRef.yu;
-		// la rotation
-		if (imageRef.nbRotation >0) imageRef.rotation += (imageRef.nbRotation *90);
-		while (imageRef.nbRotation >359) imageRef.nbRotation -=360;
-		while (imageRef.nbRotation <-359) imageRef.nbRotation +=360;
 		if (imageRef.rotation !==0) context.rotate (imageRef.rotation * Math.PI /180);
+		context.drawImage (imageModif, - imageRef.xo, - imageRef.yo, imageRef.xu, imageRef.yu);
+	/*	if (imageRef.rotation !==0) context.rotate (imageRef.rotation * Math.PI /180);
 		context.drawImage (imageModif, - imageRef.xo, - imageRef.yo);
-//		context.drawImage (imageModif, - imageRef.xo, - imageRef.yo, imageRef.xu, imageRef.yu);
+		context.drawImage (imageModif, - imageRef.xo, - imageRef.yo, imageRef.xu, imageRef.yu);
+		context.drawImage (imageModif, 0, 0, imageRef.xu, imageRef.yu);
 		imageModif.src = canvas.toDataURL();
 		imageModif.width = canvas.width;
 		imageModif.height = canvas.height;
 		imageFrame.style.height = canvas.height + 'px';
 		imageFrame.style.width = canvas.width + 'px';
-		linkDownload.href = imageModif.src;
-//		document.body.appendChild (canvas);
+	*/
+		linkDownload.href = canvas.toDataURL();
+		document.body.appendChild (canvas);
 	}
 </script></html>
