--- a/modele shopping.html
+++ b/modele shopping.html
@@ -32,6 +32,7 @@ li {
 	height: 2em;
 	line-height: 2em;
 	border-radius: 0.5em;
+	background-color: #012;
 }
 li > ul {
 	display: flex;
@@ -44,7 +45,7 @@ li > ul > li {
 	margin: 0;
 	padding: 0;
 }
-li > ul > li > button {
+button {
 	margin: 0;
 	padding: 0.5em;
 	width: 100%;
