--- a/piece.html
+++ b/piece.html
@@ -20,7 +20,7 @@ body {
 	perspective-origin: 50% 100px;
 }
 piece {
-	animation-name: spin-room-vertical;
+	animation-name: spin-room-horizontal;
 	--plafond: transparent;
 }
 bol { --width: 2cm; }
