--- a/pave.html
+++ b/pave.html
@@ -8,47 +8,133 @@
 <meta name='link' content='o'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/structure.css'/>
 <link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/perso.css' media='screen'/>
-<link rel='stylesheet' type='text/css' href='file:///C:/wamp64/www/site-dp/library-css/pave.css'/>
-<script type='text/javascript' src='file:///C:/wamp64/www/site-dp/library-js/pave-3d.js'></script>
 <style type='text/css'>
 body {
 	perspective: 800px;
 	perspective-origin: 50% 100px;
 }
-test-3d, boul-3d, cyld-3d, bevl-3d {
-	width: 16em;
-	height: 29em;
-	--depth: 4em;
-	color: ivory;
-	border: solid 4px maroon;
-	background-color: #8046;
-	margin-left: 10em;
-	margin-top: 2em;
-	border-radius: 23%;
-	transform: rotateX(-90deg);
+@keyframes spin-x {
+	from { transform: rotateX(0); }
+	to { transform: rotateX(-360deg); }
 }
-/*
-	animation: spin-horizontal 8s infinite linear;
-	animation: spin-vertical 8s infinite linear;
-	transform: rotateX(-80deg) rotateZ(90deg);
-	transform: rotateY(-45deg) rotateX(-30deg);
-	transform: rotateX(-30deg);
-	transform: rotateY(-180deg);
-	transform: rotateY(60deg);
-	transform: rotateX(-90deg);
-	transform: rotateX(90deg);
-	background-image: radial-gradient(circle, red 1em, blue);
-test-3d.mesure {
-	background:
-		repeating-linear-gradient(90deg, transparent 0.9em, var(--text-color) 0.9em 1em, transparent 1em 1.9em),
-		repeating-linear-gradient(90deg, transparent 4.8em, var(--text-color) 4.8em 5em, transparent 5em 9.8em),
-		repeating-linear-gradient(transparent 0.9em, var(--text-color) 0.9em 1em, transparent 1em 1.9em),
-		repeating-linear-gradient(skyblue 4.8em, var(--text-color) 4.8em 5em, wheat 5em 9.8em);
+@keyframes spin-y {
+	from { transform: rotateY(0); }
+	to { transform: rotateY(360deg); }
 }
-	<cyld-3d> </cyld-3d>
-	<boul-3d> </boul-3d>
-	<bevl-3d> </bevl-3d>
-*/
-</style></head><body>
-	<test-3d> </test-3d>
+@keyframes spin-z {
+	from { transform: rotateZ(0); }
+	to { transform: rotateZ(-360deg); }
+}
+pave-3d, hexa-3d {
+	/* propriétés modifiables */
+	--width: 3cm;
+	--height: 4cm;
+	--depth: 2cm;
+	--bord: solid 4px var(--bord-color);
+	--fond: var(--fond-color);
+	color: var(--text-color);
+	animation: spin-y 5s infinite linear;
+	/* ------ */
+	--depth-half: calc(var(--depth) /2);
+	border: none;
+	background: none;
+	width: var(--width);
+	height: var(--height);
+	display: inline-block;
+	transform-style: preserve-3d;
+	padding: 0;
+	text-align: center;
+	background-position: center;
+}
+hexa-3d { --depth: calc(var(--width) * 0.8660254037844386); }
+pave-3d >*, hexa-3d >* {
+	border: var(--bord);
+	background: var(--fond);
+	width: inherit;
+	height: inherit;
+	margin: 0;
+	color: inherit;
+	position: absolute;
+	top: 0;
+	left: 0;
+	text-align: center;
+	background-position: center;
+	background-size: contain;
+	transform-origin: center center;
+}
+pave-3d >*:nth-child(1), hexa-3d >*:nth-child(1){
+	height: var(--depth);
+	transform: rotateX(-90deg) translateZ(calc(var(--height) - var(--depth-half)));
+}
+pave-3d >*:nth-child(2), hexa-3d >*:nth-child(2){
+	height: var(--depth);
+	transform: rotateX(90deg) translateZ(var(--depth-half));
+}
+pave-3d >*:nth-child(3){ transform: rotateY(180deg) translateZ(var(--depth-half)); }
+pave-3d >*:nth-child(6) { transform: translateZ(var(--depth-half)); }
+pave-3d >*:nth-child(4) {
+	width: var(--depth);
+	transform: rotateY(-90deg) translateZ(var(--depth-half));
+}
+pave-3d >*:nth-child(5) {
+	width: var(--depth);
+	transform: rotateY(90deg) translateZ(calc(var(--width) - var(--depth-half)));
+}
+pave-3d.vertical >*:nth-child(3) { transform: rotateX(180deg) translateZ(var(--depth-half)); }
+pave-3d.pole { --depth: var(--width); }
+pave-3d.cube {
+	--depth: var(--width);
+	--height: var(--width);
+}
+hexa-3d >*:nth-child(1), hexa-3d >*:nth-child(2){ clip-path: polygon(25% 0, 75% 0, 100% 50%, 75% 100%, 25% 100%, 0 50%); }
+hexa-3d >*:nth-child(n+3){
+	width: 50%;
+	left: 25%;
+}
+</style><script type='text/javascript'>
+function mutationNb (mutations){
+	// mutations est un MutationRecord
+	var nbChildren =0;
+	mutations.forEach (function (mutation){
+		if (mutation.addedNodes.length && mutation.addedNodes[0].constructor.name !== 'Text') nbChildren +=1;
+	});
+	return nbChildren;
+}
+class Shape3d extends HTMLElement{
+	constructor (sideNb){
+		super();
+		this.sideNb = sideNb;
+	}
+	connectedCallback(){
+		// ajouter les enfants manquants
+		const self = this;
+		var nbChildren =0;
+		var observer = new MutationObserver (function (mutations){
+			nbChildren = nbChildren + mutationNb (mutations);
+			if (nbChildren <2+ self.sideNb) self.appendChild (document.createElement ('p'));
+		});
+		observer.observe (this, { childList: true });
+}}
+class Pave3d extends Shape3d{ constructor(){ super (4); }}
+class Hexa3d extends Shape3d{ constructor(){ super (6); }}
+customElements.define ('pave-3d', Pave3d);
+customElements.define ('hexa-3d', Hexa3d);
+</script></head><body>
+	<pave-3d class='cube'>
+		<p>bottom</p>
+		<p>top</p>
+		<p>back</p>
+		<p>left</p>
+		<p>right</p>
+		<p>front</p>
+	</pave-3d>
+	<hexa-3d> </hexa-3d>
+	<div>
+		<p>top</p>
+		<p>bottom</p>
+		<p>back</p>
+		<p>left</p>
+		<p>right</p>
+		<p>front</p>
+	</div>
 </body></html>
