--- a/pave.html
+++ b/pave.html
@@ -11,7 +11,8 @@
 <style type='text/css'>
 body {
 	perspective: 800px;
-	perspective-origin: 50% 100px;
+	perspective-origin: 10% 100px;
+	padding-left: 10em;
 }
 @keyframes spin-x {
 	from { transform: rotateX(0); }
@@ -25,15 +26,14 @@ body {
 	from { transform: rotateZ(0); }
 	to { transform: rotateZ(-360deg); }
 }
-pave-3d, hexa-3d {
+pave-3d, tiso-3d, trec-3d, hexa-3d, octo-3d, cyld-3d, boul-3d, cyl-q3d, bol-q3d {
 	/* propriétés modifiables */
-	--width: 3cm;
-	--height: 4cm;
-	--depth: 2cm;
+	--width: 9cm;
+	--height: 6cm;
+	--depth: 8cm;
 	--bord: solid 4px var(--bord-color);
-	--fond: var(--fond-color);
+	--fond: #F084;
 	color: var(--text-color);
-	animation: spin-y 5s infinite linear;
 	/* ------ */
 	--depth-half: calc(var(--depth) /2);
 	border: none;
@@ -46,8 +46,9 @@ pave-3d, hexa-3d {
 	text-align: center;
 	background-position: center;
 }
-hexa-3d { --depth: calc(var(--width) * 0.8660254037844386); }
-pave-3d >*, hexa-3d >* {
+hexa-3d, tiso-3d { --depth: calc(var(--width) * 0.8660254037844386); }
+trec-3d { --depth: calc(var(--width) * 0.5); }
+pave-3d >*, tiso-3d >*, trec-3d >*, hexa-3d >*, octo-3d >*, cyld-3d >*, boul-3d >*, cyl-q3d >*, bol-q3d >* {
 	border: var(--bord);
 	background: var(--fond);
 	width: inherit;
@@ -62,15 +63,18 @@ pave-3d >*, hexa-3d >* {
 	background-size: contain;
 	transform-origin: center center;
 }
-pave-3d >*:nth-child(1), hexa-3d >*:nth-child(1){
+pave-3d >*:nth-child(1), tiso-3d >*:nth-child(1), trec-3d >*:nth-child(1), hexa-3d >*:nth-child(1), octo-3d >*:nth-child(1), cyld-3d >*:nth-child(1)
+{
 	height: var(--depth);
 	transform: rotateX(-90deg) translateZ(calc(var(--height) - var(--depth-half)));
 }
-pave-3d >*:nth-child(2), hexa-3d >*:nth-child(2){
+pave-3d >*:nth-child(2), tiso-3d >*:nth-child(2), trec-3d >*:nth-child(2), hexa-3d >*:nth-child(2), octo-3d >*:nth-child(2), cyld-3d >*:nth-child(2)
+{
 	height: var(--depth);
 	transform: rotateX(90deg) translateZ(var(--depth-half));
 }
-pave-3d >*:nth-child(3){ transform: rotateY(180deg) translateZ(var(--depth-half)); }
+pave-3d >*:nth-child(3), tiso-3d >*:nth-child(3), trec-3d >*:nth-child(3), hexa-3d >*:nth-child(3), octo-3d >*:nth-child(3)
+	{ transform: rotateY(180deg) translateZ(var(--depth-half)); }
 pave-3d >*:nth-child(6) { transform: translateZ(var(--depth-half)); }
 pave-3d >*:nth-child(4) {
 	width: var(--depth);
@@ -80,8 +84,10 @@ pave-3d >*:nth-child(5) {
 	width: var(--depth);
 	transform: rotateY(90deg) translateZ(calc(var(--width) - var(--depth-half)));
 }
-pave-3d.vertical >*:nth-child(3) { transform: rotateX(180deg) translateZ(var(--depth-half)); }
-pave-3d.pole { --depth: var(--width); }
+pave-3d.vertical >*:nth-child(3), tiso-3d.vertical >*:nth-child(3), trec-3d.vertical >*:nth-child(3),
+hexa-3d.vertical >*:nth-child(3), octo-3d.vertical >*:nth-child(3)
+	{ transform: rotateX(180deg) translateZ(var(--depth-half)); }
+pave-3d.pole, octo-3d, cyld-3d, boul-3d, cyl-q3d, bol-q3d { --depth: var(--width); }
 pave-3d.cube {
 	--depth: var(--width);
 	--height: var(--width);
@@ -91,6 +97,102 @@ hexa-3d >*:nth-child(n+3){
 	width: 50%;
 	left: 25%;
 }
+hexa-3d >*:nth-child(4){ transform: rotateY(240deg) translateZ(var(--depth-half)); }
+hexa-3d >*:nth-child(5){ transform: rotateY(300deg) translateZ(var(--depth-half)); }
+hexa-3d >*:nth-child(6){ transform: translateZ(var(--depth-half)); }
+hexa-3d >*:nth-child(7){ transform: rotateY(60deg) translateZ(var(--depth-half)); }
+hexa-3d >*:nth-child(8){ transform: rotateY(120deg) translateZ(var(--depth-half)); }
+
+tiso-3d >*:nth-child(1), trec-3d >*:nth-child(1) { clip-path: polygon(0 100%, 100% 100%, 50% 0); }
+tiso-3d >*:nth-child(2), trec-3d >*:nth-child(2) { clip-path: polygon(0 0, 100% 0, 50% 100%); }
+tiso-3d >*:nth-child(4){ transform: rotateY(-60deg) translateZ(calc(var(--depth-half) * 0.5)) translateX(-12.5%); }
+tiso-3d >*:nth-child(5){ transform: rotateY(60deg) translateZ(calc(var(--depth-half) * 0.5)) translateX(12.5%); }
+
+trec-3d >*:nth-child(n+4){
+	width: 70.71067811865475%;
+	left: 14.644660940672622%;
+}
+trec-3d >*:nth-child(4){ transform: rotateY(-45deg) translateZ(calc(var(--depth-half) * 0.7071067811865475)) translateX(-25%); }
+trec-3d >*:nth-child(5){ transform: rotateY(45deg) translateZ(calc(var(--depth-half) * 0.7071067811865475)) translateX(25%); }
+
+octo-3d >*:nth-child(1), octo-3d >*:nth-child(2){
+	clip-path: polygon(29.28935% 0, 70.71065% 0, 100% 29.28935%, 100% 70.71065%, 70.71065% 100%, 29.28935% 100%, 0 70.71065%, 0 29.28935%);
+}
+octo-3d >*:nth-child(n+3){
+	width: 41.4213%;
+	left: calc(var(--depth-half) - 20.71065%);
+}
+octo-3d >*:nth-child(4){ transform: rotateY(225deg) translateZ(var(--depth-half)); }
+octo-3d >*:nth-child(5){ transform: rotateY(270deg) translateZ(var(--depth-half)); }
+octo-3d >*:nth-child(6){ transform: rotateY(315deg) translateZ(var(--depth-half)); }
+octo-3d >*:nth-child(7){ transform: translateZ(var(--depth-half)); }
+octo-3d >*:nth-child(8){ transform: rotateY(45deg) translateZ(var(--depth-half)); }
+octo-3d >*:nth-child(9){ transform: rotateY(90deg) translateZ(var(--depth-half)); }
+octo-3d >*:nth-child(10){ transform: rotateY(135deg) translateZ(var(--depth-half)); }
+
+cyl-q3d, bol-q3d{
+	height: inherit;
+	width: inherit;
+	border: none;
+	background: none;
+	--width: inherit;
+	--bord: inherit;
+	--fond: inherit;
+}
+cyl-q3d >*{
+	height: inherit;
+	width: 6.5%;
+	left: 46.75%; /* calc((var(--width) - width) /2) */
+	border: none;
+	transform-style: preserve-3d;
+}
+cyl-q3d >*:before, cyl-q3d >*:after {
+	content: "";
+	width: 100%;
+	height: inherit;
+	border: inherit;
+	background: inherit;
+	display: block;
+	position: absolute;
+	top: 0;
+	text-align: center;
+	background-position: center;
+	background-size: contain;
+}
+cyl-q3d >*:before {
+	transform-origin: center left;
+	left: 100%;
+	transform: rotateY(7.5deg);
+}
+cyl-q3d >*:after {
+	transform-origin: center right;
+	left: -100%;
+	transform: rotateY(-7.5deg);
+}
+cyl-q3d >*:nth-child(1){ transform: rotateY(101.25deg) translateZ(var(--depth-half)); }
+cyl-q3d >*:nth-child(2){ transform: rotateY(123.75deg) translateZ(var(--depth-half)); }
+cyl-q3d >*:nth-child(3){ transform: rotateY(146.25deg) translateZ(var(--depth-half)); }
+cyl-q3d >*:nth-child(4){ transform: rotateY(168.75deg) translateZ(var(--depth-half)); }
+
+cyld-3d >*:nth-child(1), cyld-3d >*:nth-child(2){ border-radius: 50%; }
+cyld-3d >*:nth-child(4){ transform: rotateY(90deg); }
+cyld-3d >*:nth-child(5){ transform: rotateY(180deg); }
+cyld-3d >*:nth-child(6){ transform: rotateY(270deg); }
+
+.mesure {
+	/* objet en cours de création */
+	--fond:
+		linear-gradient(90deg, transparent 49.5%, maroon 49.5% 50.5%, transparent 50.5%),
+		linear-gradient(#0994 49.5%, maroon 49.5% 50.5%, #0994 50.5%);
+	--bord: none;
+	background-image:
+		linear-gradient(90deg, transparent 49.5%, maroon 49.5% 50.5%, transparent 50.5%),
+		linear-gradient(#0994 49.5%, maroon 49.5% 50.5%, #0994 50.5%);
+}
+cyld-3d {
+	animation: spin-x 10s infinite linear;
+}
+
 </style><script type='text/javascript'>
 function mutationNb (mutations){
 	// mutations est un MutationRecord
@@ -101,9 +203,9 @@ function mutationNb (mutations){
 	return nbChildren;
 }
 class Shape3d extends HTMLElement{
-	constructor (sideNb){
+	constructor (faceNb){
 		super();
-		this.sideNb = sideNb;
+		this.faceNb = faceNb;
 	}
 	connectedCallback(){
 		// ajouter les enfants manquants
@@ -111,15 +213,75 @@ class Shape3d extends HTMLElement{
 		var nbChildren =0;
 		var observer = new MutationObserver (function (mutations){
 			nbChildren = nbChildren + mutationNb (mutations);
-			if (nbChildren <2+ self.sideNb) self.appendChild (document.createElement ('p'));
+			if (nbChildren < self.faceNb) self.appendChild (document.createElement ('p'));
 		});
 		observer.observe (this, { childList: true });
 }}
-class Pave3d extends Shape3d{ constructor(){ super (4); }}
-class Hexa3d extends Shape3d{ constructor(){ super (6); }}
+class Pave3d extends Shape3d{ constructor(){ super (6); }}
+class Trig3d extends Shape3d{ constructor(){ super (5); }}
+class Trec3d extends Shape3d{ constructor(){ super (5); }}
+class Hexa3d extends Shape3d{ constructor(){ super (8); }}
+class Octo3d extends Shape3d{ constructor(){ super (10); }}
+class CylQ3d extends Shape3d{
+	constructor(){ super (4); }
+	connectedCallback(){ for (var c=0; c< this.faceNb; c++) this.appendChild (document.createElement ('p')); }
+}
+class Cyld3d extends Shape3d{
+	constructor(){ super (6); }
+	connectedCallback(){
+		// ajouter les enfants manquants
+		const self = this;
+		var nbChildren =0;
+		var observer = new MutationObserver (function (mutations){
+			nbChildren = nbChildren + mutationNb (mutations);
+			if (nbChildren <2) self.appendChild (document.createElement ('p'));
+			else if (nbChildren < self.faceNb) self.appendChild (document.createElement ('cyl-q3d'));
+		});
+		observer.observe (this, { childList: true });
+	//	for (var c=2; c< this.faceNb; c++) this.appendChild (document.createElement ('cyl-q3d'));
+}}
 customElements.define ('pave-3d', Pave3d);
+customElements.define ('tiso-3d', Trig3d);
+customElements.define ('trec-3d', Trec3d);
 customElements.define ('hexa-3d', Hexa3d);
+customElements.define ('octo-3d', Octo3d);
+customElements.define ('cyl-q3d', CylQ3d);
+customElements.define ('cyld-3d', Cyld3d);
 </script></head><body>
+	<cyld-3d>
+		<p>bottom</p>
+		<p>top</p>
+	</cyld-3d>
+<!--
+	<hexa-3d>
+		<p>bottom</p>
+		<p>top</p>
+		<p>back</p>
+		<p>back left</p>
+		<p>front left</p>
+		<p>front</p>
+		<p>front right</p>
+		<p>back right</p>
+	</hexa-3d>
+	<octo-3d>
+		<p>bottom</p>
+		<p>top</p>
+		<p>back</p>
+		<p>back left</p>
+		<p>left</p>
+		<p>front left</p>
+		<p>front</p>
+		<p>front right</p>
+		<p>right</p>
+		<p>back right</p>
+	</octo-3d>
+	<trec-3d>
+		<p>bottom</p>
+		<p>top</p>
+		<p>back</p>
+		<p>left</p>
+		<p>right</p>
+	</trec-3d>
 	<pave-3d class='cube'>
 		<p>bottom</p>
 		<p>top</p>
@@ -128,7 +290,6 @@ customElements.define ('hexa-3d', Hexa3d);
 		<p>right</p>
 		<p>front</p>
 	</pave-3d>
-	<hexa-3d> </hexa-3d>
 	<div>
 		<p>top</p>
 		<p>bottom</p>
@@ -137,4 +298,5 @@ customElements.define ('hexa-3d', Hexa3d);
 		<p>right</p>
 		<p>front</p>
 	</div>
+-->
 </body></html>
