--- a/pave.html
+++ b/pave.html
@@ -26,7 +26,7 @@ body {
 	from { transform: rotateZ(0); }
 	to { transform: rotateZ(-360deg); }
 }
-pave-3d, tiso-3d, trec-3d, hexa-3d, octo-3d, cyld-3d, boul-3d, cyl-q3d, bol-q3d {
+pave-3d, tiso-3d, trec-3d, hexa-3d, octo-3d, cyld-3d, boul-3d, bole-3d, cyl-q3d, bol-q3d {
 	/* propriétés modifiables */
 	--width: 9cm;
 	--height: 6cm;
@@ -48,7 +48,7 @@ pave-3d, tiso-3d, trec-3d, hexa-3d, octo-3d, cyld-3d, boul-3d, cyl-q3d, bol-q3d 
 }
 hexa-3d, tiso-3d { --depth: calc(var(--width) * 0.8660254037844386); }
 trec-3d { --depth: calc(var(--width) * 0.5); }
-pave-3d >*, tiso-3d >*, trec-3d >*, hexa-3d >*, octo-3d >*, cyld-3d >*, boul-3d >*, cyl-q3d >*, bol-q3d >* {
+pave-3d >*, tiso-3d >*, trec-3d >*, hexa-3d >*, octo-3d >*, cyld-3d >*, boul-3d >*, bole-3d >*, cyl-q3d >*, bol-q3d >* {
 	border: var(--bord);
 	background: var(--fond);
 	width: inherit;
@@ -87,7 +87,7 @@ pave-3d >*:nth-child(5) {
 pave-3d.vertical >*:nth-child(3), tiso-3d.vertical >*:nth-child(3), trec-3d.vertical >*:nth-child(3),
 hexa-3d.vertical >*:nth-child(3), octo-3d.vertical >*:nth-child(3)
 	{ transform: rotateX(180deg) translateZ(var(--depth-half)); }
-pave-3d.pole, octo-3d, cyld-3d, boul-3d, cyl-q3d, bol-q3d { --depth: var(--width); }
+pave-3d.pole, octo-3d, cyld-3d, boul-3d, bole-3d, cyl-q3d, bol-q3d { --depth: var(--width); }
 pave-3d.cube {
 	--depth: var(--width);
 	--height: var(--width);
@@ -131,25 +131,25 @@ octo-3d >*:nth-child(9){ transform: rotateY(90deg) translateZ(var(--depth-half))
 octo-3d >*:nth-child(10){ transform: rotateY(135deg) translateZ(var(--depth-half)); }
 
 cyl-q3d, bol-q3d{
-	height: inherit;
 	width: inherit;
-	border: none;
-	background: none;
 	--width: inherit;
 	--bord: inherit;
 	--fond: inherit;
+	border: none;
+	background: none;
 }
-cyl-q3d >*{
-	height: inherit;
+cyl-q3d{ height: inherit; }
+cyl-q3d >*, bol-q3d >*{
 	width: 6.5%;
 	left: 46.75%; /* calc((var(--width) - width) /2) */
 	border: none;
 	transform-style: preserve-3d;
 }
-cyl-q3d >*:before, cyl-q3d >*:after {
+cyl-q3d >*{ height: inherit; }
+cyl-q3d >*:before, cyl-q3d >*:after, bol-q3d >*:before, bol-q3d >*:after {
 	content: "";
 	width: 100%;
-	height: inherit;
+	height: 100%;
 	border: inherit;
 	background: inherit;
 	display: block;
@@ -179,6 +179,96 @@ cyld-3d >*:nth-child(4){ transform: rotateY(90deg); }
 cyld-3d >*:nth-child(5){ transform: rotateY(180deg); }
 cyld-3d >*:nth-child(6){ transform: rotateY(270deg); }
 
+bol-q3d {
+	height: 50%;
+	--height: calc(var(--width) /2);
+}
+bol-q3d >*{
+	height: 6.5%;
+	top: unset;
+	bottom: 6.5%;
+}
+bol-q3d >*:nth-child(n+60){
+	width: 100%;
+	height: 100%;
+	left: 0%;
+}
+bol-q3d >*:nth-child(60){ transform: rotateY(90deg); }
+bol-q3d >*:nth-child(61){ transform: rotateY(45deg); }
+bol-q3d >*:nth-child(n+60):before, bol-q3d >*:nth-child(n+60):after{ content: none; }
+bol-q3d >*:before {
+	transform-origin: top center;
+	transform: rotateX(-7.5deg);
+	top: 100%;
+}
+bol-q3d >*:after {
+	transform-origin: bottom center;
+	transform: rotateX(7.5deg);
+	top: -100%;
+}
+bol-q3d >*:nth-child(1){ transform: rotateY(93.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(2){ transform: rotateY(101.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(3){ transform: rotateY(108.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(4){ transform: rotateY(116.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(5){ transform: rotateY(123.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(6){ transform: rotateY(131.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(7){ transform: rotateY(138.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(8){ transform: rotateY(146.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(9){ transform: rotateY(153.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(10){ transform: rotateY(161.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(11){ transform: rotateY(168.75deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(12){ transform: rotateY(176.25deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(13){ transform: rotateY(93.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(14){ transform: rotateY(101.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(15){ transform: rotateY(108.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(16){ transform: rotateY(116.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(17){ transform: rotateY(123.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(18){ transform: rotateY(131.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(19){ transform: rotateY(138.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(20){ transform: rotateY(146.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(21){ transform: rotateY(153.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(22){ transform: rotateY(161.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(23){ transform: rotateY(168.75deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(24){ transform: rotateY(176.25deg) rotateX(7.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(25){ transform: rotateY(93.75deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(26){ transform: rotateY(101.25deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(27){ transform: rotateY(108.75deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(28){ transform: rotateY(116.25deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(29){ transform: rotateY(123.75deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(30){ transform: rotateY(131.25deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(31){ transform: rotateY(138.75deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(32){ transform: rotateY(146.25deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(33){ transform: rotateY(153.75deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(34){ transform: rotateY(161.25deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(35){ transform: rotateY(168.75deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(36){ transform: rotateY(176.25deg) rotateX(15deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(37){ transform: rotateY(93.75deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(38){ transform: rotateY(101.25deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(39){ transform: rotateY(108.75deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(40){ transform: rotateY(116.25deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(41){ transform: rotateY(123.75deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(42){ transform: rotateY(131.25deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(43){ transform: rotateY(138.75deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(44){ transform: rotateY(146.25deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(45){ transform: rotateY(153.75deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(46){ transform: rotateY(161.25deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(47){ transform: rotateY(168.75deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(48){ transform: rotateY(176.25deg) rotateX(22.5deg) translateZ(var(--depth-half)); }
+
+/*
+bol-q3d >*:nth-child(){ transform: rotateY(93.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(){ transform: rotateY(101.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(){ transform: rotateY(108.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(){ transform: rotateY(116.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(){ transform: rotateY(123.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(){ transform: rotateY(131.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(){ transform: rotateY(138.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(){ transform: rotateY(146.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(){ transform: rotateY(153.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(){ transform: rotateY(161.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(){ transform: rotateY(168.75deg) rotateX(30deg) translateZ(var(--depth-half)); }
+bol-q3d >*:nth-child(){ transform: rotateY(176.25deg) rotateX(30deg) translateZ(var(--depth-half)); }
+*/
 .mesure {
 	/* objet en cours de création */
 	--fond:
@@ -189,10 +279,7 @@ cyld-3d >*:nth-child(6){ transform: rotateY(270deg); }
 		linear-gradient(90deg, transparent 49.5%, maroon 49.5% 50.5%, transparent 50.5%),
 		linear-gradient(#0994 49.5%, maroon 49.5% 50.5%, #0994 50.5%);
 }
-cyld-3d {
-	animation: spin-x 10s infinite linear;
-}
-
+bole-3d { animation: spin-x 10s infinite linear; }
 </style><script type='text/javascript'>
 function mutationNb (mutations){
 	// mutations est un MutationRecord
@@ -240,6 +327,14 @@ class Cyld3d extends Shape3d{
 		observer.observe (this, { childList: true });
 	//	for (var c=2; c< this.faceNb; c++) this.appendChild (document.createElement ('cyl-q3d'));
 }}
+class BolQ3d extends Shape3d{
+	constructor(){ super (72); }
+	connectedCallback(){ for (var c=0; c< this.faceNb; c++) this.appendChild (document.createElement ('p')); }
+}
+class Bole3d extends Shape3d{
+	constructor(){ super (1); }
+	connectedCallback(){ for (var c=0; c< this.faceNb; c++) this.appendChild (document.createElement ('bol-q3d')); }
+}
 customElements.define ('pave-3d', Pave3d);
 customElements.define ('tiso-3d', Trig3d);
 customElements.define ('trec-3d', Trec3d);
@@ -247,12 +342,15 @@ customElements.define ('hexa-3d', Hexa3d);
 customElements.define ('octo-3d', Octo3d);
 customElements.define ('cyl-q3d', CylQ3d);
 customElements.define ('cyld-3d', Cyld3d);
+customElements.define ('bol-q3d', BolQ3d);
+customElements.define ('bole-3d', Bole3d);
 </script></head><body>
+	<bole-3d class='mesure'> </bole-3d>
+<!--
 	<cyld-3d>
 		<p>bottom</p>
 		<p>top</p>
 	</cyld-3d>
-<!--
 	<hexa-3d>
 		<p>bottom</p>
 		<p>top</p>
