--- a/pave-3d.html
+++ b/pave-3d.html
@@ -16,13 +16,13 @@ body {
 	perspective-origin: 10% 100px;
 	padding: 6em;
 }
-matl-3d {
-	--width: 9cm;
-	--height: 8cm;
-	--depth: 6cm;
+matl-3d, pave-3d {
+	--width: 8cm;
+	--height: 10cm;
+	--depth: 2cm;
 	--bord: solid 4px var(--bord-color);
 	--fond: #F084;
-	--bevwidth: 3em;
+	--bevwidth: 0.3cm;
 	animation: spin-x 10s infinite linear;
 }
 </style></head><body>
