--- a/pave-3d.html
+++ b/pave-3d.html
@@ -17,13 +17,13 @@ body {
 	padding: 6em;
 }
 matl-3d, pave-3d {
-	--width: 8cm;
-	--height: 10cm;
-	--depth: 2cm;
+	--width: 18cm;
+	--height: 13cm;
+	--depth: 8cm;
 	--bord: solid 4px var(--bord-color);
 	--fond: #F084;
-	--bevwidth: 0.3cm;
-	animation: spin-x 10s infinite linear;
+	--bevwidth: 2cm;
+	animation: spin-y 10s infinite linear;
 }
 </style></head><body>
 	<matl-3d class='mesure'><p>bottom</p><p>top</p><p>back</p><p>left</p><p>right</p><p>front</p></matl-3d>
