--- a/daily intermission - salles 20 octobre.html
+++ b/daily intermission - salles 20 octobre.html
@@ -56,21 +56,10 @@ th, td {
 	border-style: solid;
 }
 th { font-weight: bold; }
-span {
-	clip: rect(1px, 1px, 1px, 1px);
-	-webkit-clip-path: inset(50%);
-	clip-path: inset(50%); 
-	overflow: hidden;
-	width: 1px;
-	height: 1px;
-	margin: -1px;
-	white-space: nowrap;
-	padding: 0;
-	border: 0;
-	position: absolute;
-}
+p { display: none; }
 </style></head><body>
 <h1 id='daily-salles'>Les salles de réunion du groupe "daily inter-mission <abbr>tpshr</abbr>"</h1>
+<p>9 personnes en intercontrat et un dcs.</p>
 <table aria-labelledby='daily-salles'><tr>
 	<th scope='col'></th>
 	<th scope='col' id='c1'>Date</th>
@@ -81,40 +70,49 @@ span {
 	<th scope='col' id='c6' title='heure de début'>début</th>
 	<th scope='col' id='c7' title='heure de fin'>fin</th>
 </tr><tr>
-	<th scope='row' id='r1'>Mardi</th>
-	<td tabindex='0' headers='r1 c1'>07/10/2025</td>
-	<td tabindex='0' headers='r1 c2'>D</td>
-	<td tabindex='0' headers='r1 c3'>D2</td>
-	<td tabindex='0' headers='r1 c4'>16</td>
-	<td tabindex='0' headers='r1 c5'>Paris</td>
-	<td tabindex='0' headers='r1 c6'>09:15</td>
-	<td tabindex='0' headers='r1 c7'>11:00</td>
+	<th scope='row' id='r1'>Lundi</th>
+	<td tabindex='0' headers='r1 c1'>13/10/2025</td>
+	<td tabindex='0' headers='r1 c2'>A</td>
+	<td tabindex='0' headers='r1 c3'>D3</td>
+	<td tabindex='0' headers='r1 c4'>02</td>
+	<td tabindex='0' headers='r1 c5'>amarante</td>
+	<td tabindex='0' headers='r1 c6'>09:30</td>
+	<td tabindex='0' headers='r1 c7'>10:30</td>
 </tr><tr>
-	<th scope='row' id='r2'>Mercredi</th>
-	<td tabindex='0' headers='r2 c1'>08/10/2025</td>
+	<th scope='row' id='r2'>Mardi</th>
+	<td tabindex='0' headers='r2 c1'>14/10/2025</td>
 	<td tabindex='0' headers='r2 c2'>D</td>
-	<td tabindex='0' headers='r2 c3'>D0</td>
-	<td tabindex='0' headers='r2 c4'>12</td>
-	<td tabindex='0' headers='r2 c5'>raisin</td>
+	<td tabindex='0' headers='r2 c3'>D3</td>
+	<td tabindex='0' headers='r2 c4'>08</td>
+	<td tabindex='0' headers='r2 c5'>atlantique</td>
 	<td tabindex='0' headers='r2 c6'>09:15</td>
-	<td tabindex='0' headers='r2 c7'>11:00</td>
+	<td tabindex='0' headers='r2 c7'>12:00</td>
 </tr><tr>
-	<th scope='row' id='r3'>Jeudi</th>
-	<td tabindex='0' headers='r3 c1'>09/10/2025</td>
-	<td tabindex='0' headers='r3 c2'>C</td>
-	<td tabindex='0' headers='r3 c3'>D2</td>
-	<td tabindex='0' headers='r3 c4'>02</td>
-	<td tabindex='0' headers='r3 c5'>cobalt</td>
-	<td tabindex='0' headers='r3 c6'>09:00</td>
-	<td tabindex='0' headers='r3 c7'>18:00</td>
+	<th scope='row' id='r3'>Mercredi</th>
+	<td tabindex='0' headers='r3 c1'>15/10/2025</td>
+	<td tabindex='0' headers='r3 c2'>D</td>
+	<td tabindex='0' headers='r3 c3'>D3</td>
+	<td tabindex='0' headers='r3 c4'>04</td>
+	<td tabindex='0' headers='r3 c5'>baltique</td>
+	<td tabindex='0' headers='r3 c6'>09:30</td>
+	<td tabindex='0' headers='r3 c7'>14:30</td>
 </tr><tr>
-	<th scope='row' id='r4'>Vendredi</th>
-	<td tabindex='0' headers='r4 c1'>10/10/2025</td>
-	<td tabindex='0' headers='r4 c2'>C</td>
-	<td tabindex='0' headers='r4 c3'>D2</td>
-	<td tabindex='0' headers='r4 c4'>02</td>
-	<td tabindex='0' headers='r4 c5'>cobalt</td>
+	<th scope='row' id='r4'>Jeudi</th>
+	<td tabindex='0' headers='r4 c1'>16/10/2025</td>
+	<td tabindex='0' headers='r4 c2'>B</td>
+	<td tabindex='0' headers='r4 c3'>D4</td>
+	<td tabindex='0' headers='r4 c4'>04</td>
+	<td tabindex='0' headers='r4 c5'>magnolia</td>
 	<td tabindex='0' headers='r4 c6'>09:15</td>
-	<td tabindex='0' headers='r4 c7'>11:00</td>
+	<td tabindex='0' headers='r4 c7'>17:30</td>
+</tr><tr>
+	<th scope='row' id='r5'>Vendredi</th>
+	<td tabindex='0' headers='r5 c1'>17/10/2025</td>
+	<td tabindex='0' headers='r5 c2'>D</td>
+	<td tabindex='0' headers='r5 c3'>D0</td>
+	<td tabindex='0' headers='r5 c4'>12</td>
+	<td tabindex='0' headers='r5 c5'>raisin</td>
+	<td tabindex='0' headers='r5 c6'>09:15</td>
+	<td tabindex='0' headers='r5 c7'>17:30</td>
 </tr></table>
 </body></html>
