--- a/pave-3d.html
+++ b/pave-3d.html
@@ -14,17 +14,23 @@
 body {
 	perspective: 800px;
 	perspective-origin: 10% 100px;
-	padding: 6em;
+	padding-left: 4em;
+	padding-top: 12em;
 }
-matl-3d, pave-3d {
-	--width: 18cm;
-	--height: 13cm;
-	--depth: 8cm;
+matl-3d {
+	--width: 17cm;
+	--height: 9cm;
+	--depth: 13cm;
+	--radius: 3cm;
 	--bord: solid 4px var(--bord-color);
 	--fond: #F084;
-	--bevwidth: 2cm;
+	animation: spin-y 10s infinite linear;
+}
+reste{
+	background: #0884;
+	transform: rotateX(90deg);
 	animation: spin-y 10s infinite linear;
 }
 </style></head><body>
-	<matl-3d class='mesure'><p>bottom</p><p>top</p><p>back</p><p>left</p><p>right</p><p>front</p></matl-3d>
+	<matl-3d class='mesure'> </matl-3d>
 </body></html>
