--- a/pave-3d.html
+++ b/pave-3d.html
@@ -15,16 +15,16 @@ body {
 	perspective: 800px;
 	perspective-origin: 10% 100px;
 	padding-left: 4em;
-	padding-top: 12em;
+	padding-top: 4em;
 }
 matl-3d {
 	--width: 17cm;
-	--height: 9cm;
+	--height: 11cm;
 	--depth: 13cm;
 	--radius: 3cm;
 	--bord: solid 4px var(--bord-color);
 	--fond: #F084;
-	animation: spin-y 10s infinite linear;
+	animation: spin-x 10s infinite linear;
 }
 reste{
 	background: #0884;
@@ -32,5 +32,5 @@ reste{
 	animation: spin-y 10s infinite linear;
 }
 </style></head><body>
-	<matl-3d class='mesure'> </matl-3d>
+	<matl-3d> </matl-3d>
 </body></html>
